src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_ximgproc_ridge_detection_filter jyppx_ocv_ximgproc_ridge_detection_filter;
typedef struct jyppx_ocv_ximgproc_contour_fitting jyppx_ocv_ximgproc_contour_fitting;
typedef struct jyppx_ocv_ximgproc_scan_segment jyppx_ocv_ximgproc_scan_segment;
typedef struct jyppx_ocv_ximgproc_graph_segmentation jyppx_ocv_ximgproc_graph_segmentation;
typedef struct jyppx_ocv_ximgproc_selective_search_strategy jyppx_ocv_ximgproc_selective_search_strategy;
typedef struct jyppx_ocv_ximgproc_point3i
{
    int x;
    int y;
    int z;
} jyppx_ocv_ximgproc_point3i;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_gradient_deriche_x(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double alpha,
    double omega);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_gradient_deriche_y(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double alpha,
    double omega);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_gradient_paillou_x(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double alpha,
    double omega);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_gradient_paillou_y(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double alpha,
    double omega);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ridge_detection_filter_create(
    int ddepth,
    int dx,
    int dy,
    int ksize,
    int out_dtype,
    double scale,
    double delta,
    int border_type,
    jyppx_ocv_ximgproc_ridge_detection_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_ridge_detection_filter_release_handle(
    jyppx_ocv_ximgproc_ridge_detection_filter* filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ridge_detection_filter_get_image(
    jyppx_ocv_ximgproc_ridge_detection_filter* filter,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fourier_descriptor(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int nb_elt,
    int nb_fd);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_transform_fd(
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* transform,
    jyppx_ocv_mat* dst,
    int fd_contour);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_sampling(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int nb_elt);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_create(
    int ctr,
    int fd,
    jyppx_ocv_ximgproc_contour_fitting** fitting);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_contour_fitting_release_handle(
    jyppx_ocv_ximgproc_contour_fitting* fitting);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_estimate_transformation(
    jyppx_ocv_ximgproc_contour_fitting* fitting,
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* dst,
    jyppx_ocv_mat* alpha_phi_st,
    double* distance,
    int fd_contour);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_get_ctr_size(
    jyppx_ocv_ximgproc_contour_fitting* fitting,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_set_ctr_size(
    jyppx_ocv_ximgproc_contour_fitting* fitting,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_get_fd_size(
    jyppx_ocv_ximgproc_contour_fitting* fitting,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_contour_fitting_set_fd_size(
    jyppx_ocv_ximgproc_contour_fitting* fitting,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_threshold(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* rl_dst,
    double thresh,
    int type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_dilate(
    const jyppx_ocv_mat* rl_src,
    jyppx_ocv_mat* rl_dst,
    const jyppx_ocv_mat* rl_kernel,
    int anchor_x,
    int anchor_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_erode(
    const jyppx_ocv_mat* rl_src,
    jyppx_ocv_mat* rl_dst,
    const jyppx_ocv_mat* rl_kernel,
    int boundary_on,
    int anchor_x,
    int anchor_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_get_structuring_element(
    int shape,
    int width,
    int height,
    jyppx_ocv_mat* rl_kernel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_paint(
    jyppx_ocv_mat* image,
    const jyppx_ocv_mat* rl_src,
    double value_v0,
    double value_v1,
    double value_v2,
    double value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_is_morphology_possible(
    const jyppx_ocv_mat* rl_structuring_element,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_create_rle_image(
    const jyppx_ocv_ximgproc_point3i* runs,
    int run_count,
    int width,
    int height,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rl_morphology_ex(
    const jyppx_ocv_mat* rl_src,
    jyppx_ocv_mat* rl_dst,
    int op,
    const jyppx_ocv_mat* rl_kernel,
    int boundary_on_for_erosion,
    int anchor_x,
    int anchor_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_scan_segment_create(
    int image_width,
    int image_height,
    int num_superpixels,
    int slices,
    int merge_small,
    jyppx_ocv_ximgproc_scan_segment** segment);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_scan_segment_release_handle(
    jyppx_ocv_ximgproc_scan_segment* segment);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_scan_segment_get_number(
    jyppx_ocv_ximgproc_scan_segment* segment,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_scan_segment_iterate(
    jyppx_ocv_ximgproc_scan_segment* segment,
    const jyppx_ocv_mat* image);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_scan_segment_get_labels(
    jyppx_ocv_ximgproc_scan_segment* segment,
    jyppx_ocv_mat* labels);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_scan_segment_get_label_contour_mask(
    jyppx_ocv_ximgproc_scan_segment* segment,
    jyppx_ocv_mat* image,
    int thick_line);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_create(
    double sigma,
    float k,
    int min_size,
    jyppx_ocv_ximgproc_graph_segmentation** segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_graph_segmentation_release_handle(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_process_image(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_get_sigma(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_set_sigma(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_get_k(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_set_k(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_get_min_size(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_graph_segmentation_set_min_size(
    jyppx_ocv_ximgproc_graph_segmentation* segmentation,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_create_color(
    jyppx_ocv_ximgproc_selective_search_strategy** strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_create_size(
    jyppx_ocv_ximgproc_selective_search_strategy** strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_create_texture(
    jyppx_ocv_ximgproc_selective_search_strategy** strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_create_fill(
    jyppx_ocv_ximgproc_selective_search_strategy** strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_create_multiple(
    jyppx_ocv_ximgproc_selective_search_strategy** strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_selective_search_strategy_release_handle(
    jyppx_ocv_ximgproc_selective_search_strategy* strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_set_image(
    jyppx_ocv_ximgproc_selective_search_strategy* strategy,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* regions,
    const jyppx_ocv_mat* sizes,
    int image_id);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_get(
    jyppx_ocv_ximgproc_selective_search_strategy* strategy,
    int r1,
    int r2,
    float* value);